[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/hud/combo_display/combo_display.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/hud_sub_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/hud/hud_combo_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ComboDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="LockUp" type="Node2D" parent="."]
position = Vector2( -136, 0 )

[node name="Title" type="Label" parent="LockUp"]
margin_right = 123.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "Current Combo"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CurrentCombo" type="Label" parent="LockUp"]
margin_left = 32.0
margin_top = 24.0
margin_right = 94.0
margin_bottom = 118.0
theme = ExtResource( 3 )
text = "00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ComboTimerBar" type="ProgressBar" parent="LockUp"]
margin_top = 112.0
margin_right = 128.0
margin_bottom = 120.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
